--- a/package.json
+++ b/package.json
@@ -20,17 +20,31 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@keyv/redis": "^4.3.2",
+    "@langchain/community": "^0.3.36",
+    "@langchain/core": "^0.3.42",
+    "@langchain/deepseek": "^0.0.1",
+    "@langchain/langgraph": "^0.2.54",
+    "@langchain/ollama": "^0.2.0",
+    "@langchain/openai": "^0.4.5",
+    "@nestjs/cache-manager": "^3.0.0",
     "@nestjs/common": "^11.0.11",
+    "@nestjs/config": "^4.0.1",
     "@nestjs/core": "^11.0.11",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.0.11",
     "@nestjs/swagger": "^11.0.3",
     "@prisma/client": "^6.3.1",
+    "cache-manager": "^6.4.1",
+    "cacheable": "^1.8.9",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "ioredis": "^5.6.0",
     "prisma": "^6.3.1",
+    "redis": "^4.7.0",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.5",
